--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -7,6 +7,7 @@
     <title>YouTube and its Effect on Children</title>
     <!-- linked to style.css -->
     <link href="../../styles/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../../styles/tablestyle.css" rel="stylesheet" type="text/css" media="all">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&display=swap" rel="stylesheet">
   </head>
@@ -38,6 +39,39 @@
         <p>(Team coordinator to email Team Name and link to your TA)</p>
         <h3>Team name: 1403</h3>
         <h3>Team coordinator/leader: </h3>
+         <center>
+            <table>
+                <p>
+                <body ><th>Meeting Date</th>
+                    <th scope="col" class="last name">Time</th> 
+                    <th scope="col" class="first name">Length</th> 
+                    <th scope="col" class="id">Members</th> 
+                    <th scope="col" class="email">Content</th> 
+                </tr>
+                <hr>
+                </p>
+                <p align = "left"</p>
+                    <th scope="row">29/05/21</th>
+                    <td>10am</td>
+                    <td>2 Hours</td>
+                    <td>Callum, Alessandra, Rino</td>
+                    <td>Got put into our teams and brainstormed ideas</td>
+            </tr>
+                <p align = "left"</p>
+                <th scope="row">Team Member 2</th>
+                    <td>Gibson</td>
+                    <td>Callum</td>
+                    <td>15906010</td>
+                    <td>bxh9553@autuni.ac.nz</td>
+                </tr>
+                <th scope="row">Team Member 3</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </center>
         <hr>
 
         <p>Meeting Minutes Repository Alternative Link</p>
