--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <div id="content">
         <center>
             <h1>CTiS: Impact of Technology Site</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum quam in risus laoreet, vitae congue dui scelerisque. Duis euismod, est at ultricies tristique, nulla odio imperdiet mauris, nec lacinia odio nisl vitae neque. Integer consequat justo non turpis aliquet ornare. Duis eget velit sit amet mi maximus ornare eget non lacus. Proin aliquet iaculis nunc, cursus tempor ex mollis eu. Vivamus sit amet gravida elit, ut viverra libero. Quisque turpis mi, convallis eget tellus quis, tempor dignissim arcu. Aliquam varius est quis enim dictum dapibus. In et suscipit velit. Integer orci dui, fermentum quis lectus posuere, consequat venenatis elit. Nullam faucibus vitae diam eu condimentum. Maecenas condimentum justo non volutpat rhoncus. Phasellus condimentum massa ut sem porta faucibus. Vestibulum sit amet elit hendrerit, dictum orci id, viverra diam.</p>
+            <p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
+            <p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a "minimum viable product" for the purposes of this project… It has some default links, which you can take as a start for your site structure. The Process Support Links provides guidance which will be needed for presenting your final project.</p>
         </center>
     </div>
 
