--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -51,18 +51,18 @@
                 <hr>
                 </p>
                 <p align = "left"</p>
-                    <th scope="row">29/05/21</th>
+                    <th scope="row">29/04/21</th>
                     <td>10am</td>
                     <td>2 Hours</td>
                     <td>Callum, Alessandra, Rino</td>
                     <td>Got put into our teams and brainstormed ideas</td>
             </tr>
                 <p align = "left"</p>
-                <th scope="row">Team Member 2</th>
-                    <td>Gibson</td>
-                    <td>Callum</td>
-                    <td>15906010</td>
-                    <td>bxh9553@autuni.ac.nz</td>
+                <th scope="row">03/05/21</th>
+                    <td>11am</td>
+                    <td>2 hours</td>
+                    <td>Callum Alessandra Rino</td>
+                    <td>Continued to brainstorm, and finalised idea.</td>
                 </tr>
                 <th scope="row">Team Member 3</th>
                     <td></td>
