--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -61,14 +61,14 @@
                 <th scope="row">03/05/21</th>
                     <td>11am</td>
                     <td>2 hours</td>
-                    <td>Callum Alessandra Rino</td>
+                    <td>Callum, Alessandra, Rino</td>
                     <td>Continued to brainstorm, and finalised idea.</td>
                 </tr>
-                <th scope="row">Team Member 3</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <th scope="row">6/05/21</th>
+                    <td>10am</td>
+                    <td>2 hours</td>
+                    <td>Callum, Alessandra, Rino</td>
+                    <td>Started Researching articles to back up our topic</td>
                 </tr>
             </table>
         </center>
