--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -68,6 +68,12 @@
                     <td>10am</td>
                     <td>2 hours</td>
                     <td>Callum, Alessandra, Rino</td>
+                    <td>Project Presentation</td>
+                </tr>
+                <th scope="row">13/05/21</th>
+                    <td>10am</td>
+                    <td>2 hours</td>
+                    <td>Callum, Alessandra, Rino</td>
                     <td>Started Researching articles to back up our topic</td>
                 </tr>
             </table>
