--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -76,6 +76,12 @@
                     <td>Callum, Alessandra, Rino</td>
                     <td>Started Researching articles to back up our topic</td>
                 </tr>
+                <th scope="row">20/05/21</th>
+                    <td>10am</td>
+                    <td>2 hours</td>
+                    <td>Callum, Alessandra, Rino</td>
+                    <td>Continued Researching Articles and designing a layout for presentation</td>
+                </tr>
             </table>
         </center>
         <hr>
