--- a/misc/references.html
+++ b/misc/references.html
@@ -42,6 +42,8 @@
             <h4>The page or area listing the sources (high quality refereed articles - cited as APA formatted references) and any web links to high quality resources supporting the arguments in your site.</h4>
         </center>
             <p>aaaaa <a href="#content">Link</a></p>
+            <p>Lamb, S. (1993). First moral sense: An examination of the appearance of morally related behaviours in the second year of life. Journal of Moral Education, 22(2), 97-109. https://doi.org/10.1080/0305724930220202</p>
+            <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
     </div>
 
     <!-- Link to JS file -->
