--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -82,6 +82,12 @@
                     <td>Callum, Alessandra, Rino</td>
                     <td>Continued Researching Articles and designing a layout for presentation</td>
                 </tr>
+                <th scope="row">24/05/21</th>
+                    <td>11am</td>
+                    <td>2 hours</td>
+                    <td>Callum, Alessandra</td>
+                    <td>Finished desiging presentation, and orgainising who is presenting what.</td>
+                </tr>
             </table>
         </center>
         <hr>
