--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -88,6 +88,18 @@
                     <td>Callum, Alessandra</td>
                     <td>Finished desiging presentation, and orgainising who is presenting what.</td>
                 </tr>
+                <th scope="row">27/05/21</th>
+                    <td>11am</td>
+                    <td>2 hours</td>
+                    <td>Callum, Alessandra, Rino</td>
+                    <td>Present Final Presentation</td>
+                </tr>
+                <th scope="row">03/06/21</th>
+                    <td>11am</td>
+                    <td>2.5 hours</td>
+                    <td>Callum, Alessandra</td>
+                    <td>Pooling all the documents into one website, and finalising details.</td>
+                </tr>
             </table>
         </center>
         <hr>
