--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -38,7 +38,7 @@
         <h3>Due Date: 04/06/2021 midnight</h3>
         <p>(Team coordinator to email Team Name and link to your TA)</p>
         <h3>Team name: 1403</h3>
-        <h3>Team coordinator/leader: </h3>
+        <h3>Team coordinator/leader: Callum / Alessandra </h3>
          <center>
             <table>
                 <p>
