--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -172,9 +172,9 @@
         <hr>
     
         <h4>Link to your Team Repository:</h4>
-        <p>link</p>
+        <p><a href="https://github.com/CallumdGibson/1403.github.io">Link</a></p>
 
-        <h4>TA name:..........., Date Proposal Approved:../...../......</h4>
+        <h4>TA name: Robert Le, Date Proposal Approved: 06/05/2021</h4>
         <br>
       </div>
 
