--- a/misc/process-support/meetings.html
+++ b/misc/process-support/meetings.html
@@ -105,7 +105,7 @@
         <hr>
 
         <p>Meeting Minutes Repository Alternative Link</p>
-        <h5>https://github.com/CallumdGibson/1403.github.io</h5>
+<h5><a href>https://github.com/CallumdGibson/1403.github.io</a></h5>
     </div>
 
     <!-- Link to JS file -->
