--- a/misc/process-support/portfolio.html
+++ b/misc/process-support/portfolio.html
@@ -37,7 +37,7 @@
         <h3>Due Date: 04/06/2021 midnight</h3>
         <p>(Team coordinator to email Team Name and link to your TA)</p>
         <h3>Team name: 1403</h3>
-        <h3>Team coordinator/leader: </h3>
+        <h3>Team coordinators/leaders: Callum / Alessandra </h3>
         <hr>
 
       <p><a href="https://github.com/CallumdGibson/callumdgibson.github.io">Portfolio Repository Alternative Link</a></p>
