--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -45,7 +45,7 @@
         <h3>Due date: Week 7 [28/04/2021] lab session</h3>
         <p>(Team coordinator to email Team Name and link to your TA)</p>
         <h3>Team name: 1403</h3>
-        <h3>Team coordinator/leader: </h3>
+        <h3>Team coordinator/leader: Callum / Alessandra</h3>
         <hr>
         
         <h4>This is the first stage of your team project, where you propose the chosen technology/topic which you will investigate. This will then be approved or reviewed.</h4>
