--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -102,10 +102,10 @@
          </tr>
         <p align = "left"</p>
         <th scope="row">Team Member 2</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Gibson</td>
+            <td>Callum</td>
+            <td>15906010</td>
+            <td>bxh9553@autuni.ac.nz</td>
           </tr>
         <th scope="row">Team Member 3</th>
             <td></td>
