--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -135,10 +135,10 @@
             <td></td>
           </tr>
         <p align = "left"</p>
-        <th scope="row">Team Member 2</th>
-            <td></td>
-            <td></td>
-            <td></td>
+        <th scope="row">Callum</th>
+            <td>GitHub Manager</td>
+            <td>Researcher for Choices</td>
+            <td>Presenter</td>
             <td></td>
           </tr>
         <th scope="row">Team Member 3</th>
