--- a/misc/process-support/team-formation.html
+++ b/misc/process-support/team-formation.html
@@ -66,10 +66,10 @@
                     <td>bxh9553@autuni.ac.nz</td>
                 </tr>
                 <th scope="row">Team Member 3</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Jung</td>
+                    <td>Rino</td>
+                    <td>21131579</td>
+                    <td>nbk0694@autuni.ac.nz</td>
                 </tr>
             </table>
         </center>
