--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -108,10 +108,10 @@
             <td>bxh9553@autuni.ac.nz</td>
           </tr>
         <th scope="row">Team Member 3</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Jung</td>
+            <td>Rino</td>
+            <td>21131579</td>
+            <td>nbk0694@autuni.ac.nz</td>
           </tr>
         </table>
         <hr>
@@ -141,9 +141,9 @@
             <td>Presenter</td>
             <td></td>
           </tr>
-        <th scope="row">Team Member 3</th>
-            <td></td>
-            <td></td>
+        <th scope="row">Rino</th>
+            <td>Researcher for Risks</td>
+            <td>Presenter</td>
             <td></td>
             <td></td>
           </tr>
@@ -162,10 +162,10 @@
           <p align = "left"</p>
           <tr>
           <th scope="row">Repository and Templates Set up</th>
-          <td> <em>Yes/No</em></td>
-          <td> <em>Yes/No</em></td>
-          <td> <em>Yes/No</em></td>	
-          <td> <em>Yes/No</em></td>		
+          <td> <em>Yes</em></td>
+          <td> <em>Yes</em></td>
+          <td> <em>Yes</em></td>	
+          <td> <em>Yes</em></td>		
          </tr>	
         </p>
         </table>
