--- a/misc/process-support/guidelines.html
+++ b/misc/process-support/guidelines.html
@@ -38,7 +38,7 @@
         <h3>Due Date: 04/06/2021 midnight</h3>
         <p>(Team coordinator to email Team Name and link to your TA)</p>
         <h3>Team name: 1403</h3>
-        <h3>Team coordinator/leader: </h3>
+        <h3>Team coordinator/leader: Callum / Alessandra</h3>
         <hr>
 
         <table>
@@ -55,7 +55,7 @@
                   <td> Gt= 3000</td>
                   <td> Gt= 3</td>
                   <td> Lt= 3</td>
-                 <td> Gt= 10</td>
+                  <td> Gt= 10</td>
           </tr>
         </table>
         <br>
