--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -55,11 +55,11 @@
             
               <p align = "left"</p>
               <tr><th scope="row">Team Member 1</th>
-                  <td>a</td>
-                  <td>b</td>
-                  <td>1</td>
-                  <td>2</td>
-                <td><a href="team1.html">Page</a> </td>
+                  <td>Hilario</td>
+                  <td>Alessandra</td>
+                  <td>20114643</td>
+                  <td>dgg0970@autuni.ac.nz</td>
+                  <td><a href="https://alessandra-h.github.io/ah-ethics/">Page</a> </td>
               </tr>
                 <p align = "left"</p>
               <tr><th scope="row">Team Member 2</th>
