--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -59,7 +59,7 @@
                   <td>Alessandra</td>
                   <td>20114643</td>
                   <td>dgg0970@autuni.ac.nz</td>
-                  <td><a href="https://alessandra-h.github.io/ah-ethics/">Page</a> </td>
+                  <td><a href="https://alessandra-h.github.io/ah-ethics/" target="_blank" rel="noreferrer noopener">Page</a> </td>
               </tr>
                 <p align = "left"</p>
               <tr><th scope="row">Team Member 2</th>
