--- a/misc/risks.html
+++ b/misc/risks.html
@@ -39,21 +39,45 @@
         <center>
             <h1>YouTube and its Effects on Children</h1>
             <h2>Technology Risks</h2>
-            <h4>According to our research, children under 8 years old spend 65% of their time online watching videos on youtube,over positive side, 
-                it may contain disturbing content. 45% of disturbing contents can be found even though the keywords are non disturbing. And this may cause effects on children 
-                since they seem to show signs of moral awareness as early as 17 - 18 months as you can see on the slide that it's given (Antonis 2020). 
-                Children can easily fall into procrastination which can cause lack of concentration, inappropriate habits, intellectual disability, even further, 
-                development disability. Also, children knows what is wrong and what is right based on their knowledge, however, gamer youtubers, or even general 
-                youtubers who may use verbal threats, inappropriate language choices, even sexual harassing langauges can cause children to use those languages online, 
-                which leads to the cyber bullying, since children can pick new words up very quickly, and children are the mirror of the adults (Subedar and Yates 2017; Maheshwari 2017).
+            <h4>
+              According to our research, children under 8 years old spend 65% of their time online watching videos on youtube,over positive side, 
+              it may contain disturbing content. 45% of disturbing contents can be found even though the keywords are non disturbing. And this may cause effects on children 
+              since they seem to show signs of moral awareness as early as 17 - 18 months as you can see on the slide that it's given (Antonis 2020). 
+              Children can easily fall into procrastination which can cause lack of concentration, inappropriate habits, intellectual disability, even further, 
+              development disability. Also, children knows what is wrong and what is right based on their knowledge, however, gamer youtubers, or even general 
+              youtubers who may use verbal threats, inappropriate language choices, even sexual harassing langauges can cause children to use those languages online, 
+              which leads to the cyber bullying, since children can pick new words up very quickly, and children are the mirror of the adults (Subedar and Yates 2017; Maheshwari 2017).
+            </h4> 
+            <h4>
+              As it’s mentioned above, gamer youtubers, or general youtubers who may use inappropriate language choices, can also cause traumatizing children, 
+              and horror games, or horror movies which are easily found on youtube can traumatize children easily. Although people from the age group of young adults and above, 
+              make financial profits by posting stimulating videos on youtube, those can cause a butterfly effect on children worldwide, that may can easily 
+              traumatize young children. It is clear that provocative materials certainly catch people's eye (Stringhini 2020 ) . However, if you look at YouTube's 
+              censorship policy, you can easily see provocative, pornographic, sex-related videos or crime-related materials only with adult authentication, and if children 
+              don't have an account, adult authentication can also be deceiving their birth date. Even if it is content that does not require adult certification, children can 
+              easily be traumatized even through horror games, horror movies, bizarre videos or sound samples uploaded by famous YouTubers. For example, 
+              in 2014, Korea and Japan, the two major powers in Northeast Asia, the mascot of McDonald's, an American hamburger company called Lanranu, and clowns 
+              repeat the same words in Japanese, but the video editing is making it bizarre. This video was first discovered by children's curiosity after 
+              wandering aimlessly by algorithms, and became increasingly popular. However, the creepy weirdness of the video has caused viewers extreme anxiety or 
+              displeasure, and there are several children who have seizures or even suicide attempts, so it is widely known as "suicide videos." 
             </h4>
-<h4>
-As it’s mentioned above, gamer youtubers, or general youtubers who may use inappropriate language choices, can also cause traumatizing children, and horror games, or horror movies which are easily found on youtube can traumatize children easily. Although people from the age group of young adults and above, make financial profits by posting stimulating videos on youtube, those can cause a butterfly effect on children worldwide, that may can easily traumatize young children. It is clear that provocative materials certainly catch people's eye (Stringhini 2020 ) . However, if you look at YouTube's censorship policy, you can easily see provocative, pornographic, sex-related videos or crime-related materials only with adult authentication, and if children don't have an account, adult authentication can also be deceiving their birth date. Even if it is content that does not require adult certification, children can easily be traumatized even through horror games, horror movies, bizarre videos or sound samples uploaded by famous YouTubers. For example, in 2014, Korea and Japan, the two major powers in Northeast Asia, the mascot of McDonald's, an American hamburger company called Lanranu, and clowns repeat the same words in Japanese, but the video editing is making it bizarre. This video was first discovered by children's curiosity after wandering aimlessly by algorithms, and became increasingly popular. However, the creepy weirdness of the video has caused viewers extreme anxiety or displeasure, and there are several children who have seizures or even suicide attempts, so it is widely known as "suicide videos." 
+            <h4>
+              In another case, a deleted episode of the famous Japanese animation Pokemon was uploaded to YouTube, and the children were taken to the hospital with a 
+              seizure after watching it out of curiosity. All of these cases are the "butterfly effect" again by those who have devoured YouTube's censorship policy and 
+              YouTube's failure to properly identify violations of censorship policy. Cursing is not excluded. There are so many videos posted on YouTube, but the 
+              proportion of videos that contain abusive language, sexual harassment, or sexual harassment, or sexual harassment, and those that do not cause incitement 
+              is 8:2, which is a huge proportion. YouTube's censorship policy is getting better day by day.However, while YouTube's censorship policy may be lax and weak, 
+              adults need to check their channel's viewing age on YouTube studios, and even if they don't, adults say, "Are these materials really okay for children to watch?” 
+              I think we need to think morally about it. Although the world is a modern society where most countries are free, democracy and capitalism, considering the 
+              moral aspect, many other children may remain traumatized throughout their lives by the butterfly effect of one's video.We must decide carefully for the next 
+              generation, and we must work carefully. 
           </h4>
-In another case, a deleted episode of the famous Japanese animation Pokemon was uploaded to YouTube, and the children were taken to the hospital with a seizure after watching it out of curiosity. All of these cases are the "butterfly effect" again by those who have devoured YouTube's censorship policy and YouTube's failure to properly identify violations of censorship policy. Cursing is not excluded. There are so many videos posted on YouTube, but the proportion of videos that contain abusive language, sexual harassment, or sexual harassment, or sexual harassment, and those that do not cause incitement is 8:2, which is a huge proportion. YouTube's censorship policy is getting better day by day.However, while YouTube's censorship policy may be lax and weak, adults need to check their channel's viewing age on YouTube studios, and even if they don't, adults say, "Are these materials really okay for children to watch?” I think we need to think morally about it. Although the world is a modern society where most countries are free, democracy and capitalism, considering the moral aspect, many other children may remain traumatized throughout their lives by the butterfly effect of one's video.We must decide carefully for the next generation, and we must work carefully. 
-
-YouTube has become relatively common recently, and as the Internet has become common and developed, Google and various SNS have also become common recently, so there are not many censorship policies, violations, and provisions of the law. However, as we have been through that generation, we wisely believe that it is appropriate for children to play books for the next generation, for children to play with their children, not YouTube when it comes to childcare, even if it is really annoying and hip.
-
+          <h4>
+            YouTube has become relatively common recently, and as the Internet has become common and developed, Google and various SNS have also become common recently, 
+            so there are not many censorship policies, violations, and provisions of the law. However, as we have been through that generation, we wisely believe that it is 
+            appropriate for children to play books for the next generation, for children to play with their children, not YouTube when it comes to childcare, 
+            even if it is really annoying and hip.
+          </h4>
         </center>
             <p></p>
     </div>
