--- a/misc/choices.html
+++ b/misc/choices.html
@@ -41,7 +41,46 @@
             <h2>Technology Choices</h2>
             <h4>The page or area describing the choices available to us through or by your chosen technology/topic.</h4>
         </center>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum quam in risus laoreet, vitae congue dui scelerisque. Duis euismod, est at ultricies tristique, nulla odio imperdiet mauris, nec lacinia odio nisl vitae neque. Integer consequat justo non turpis aliquet ornare. Duis eget velit sit amet mi maximus ornare eget non lacus. Proin aliquet iaculis nunc, cursus tempor ex mollis eu. Vivamus sit amet gravida elit, ut viverra libero. Quisque turpis mi, convallis eget tellus quis, tempor dignissim arcu. Aliquam varius est quis enim dictum dapibus. In et suscipit velit. Integer orci dui, fermentum quis lectus posuere, consequat venenatis elit. Nullam faucibus vitae diam eu condimentum. Maecenas condimentum justo non volutpat rhoncus. Phasellus condimentum massa ut sem porta faucibus. Vestibulum sit amet elit hendrerit, dictum orci id, viverra diam.</p>
+      <p>
+        YouTube being the massive platform that it is sparks some concern for the future of the platform, and how it may affect the development of children. 
+        There is many points for both sides of the argument, from online tutorials and developing personal creative skills, to pitfalls including cyberbullying, 
+        inappropriate content, and misleading information, I am trying to investigate how parents, YouTubes’ and Googles’ choices can effect children in the long term.
+      </p>
+      <p>
+        There are many benefits that children can make use of through YouTube. It gives the children potential to develop skills they may not have been able to 
+        before and can become a creative outlet for many. As mentioned from Neumann “Although speculative, using quality YouTube content has the potential to provide 
+        children with valuable opportunities to learn digital literacy and media skills and become producers of media in the future, for example sharing their own video 
+        creations on YouTube and broadcasting quality content online” (Neumann, 2020). YouTube has also seen the potential for education, as they have started to invest into 
+        high quality educational based channels, providing children a way to view content in an educational, and entertaining, format.
+      </p>
+      <p>      
+        YouTube has a list of Community Guidelines that are constantly being updated as new trends are discovered. As stated by YouTube on their website 
+        “This work is never finished, and we are always evaluating our policies to understand how we can better strike a balance between keeping the YouTube community 
+        protected and giving everyone a voice.”(YouTube, n.d.) The world is everchanging, and content is no different. The big point of reference is Covid-19, and many 
+        videos were coming out spreading incorrect information, influencing not just adults, but children as well. YouTube added new guidelines in regards to the sharing 
+        of this information, and will continue to update if new trends are potentially harmful.
+      </p>
+      <p>
+        YouTube has also created a specific app to allow kids to consume content in a controlled manner. This allows children to view content made specifically for kids, 
+        and in most cases will allow viewing of much more suitable content. Parents are able to tune the app to filter out content they do not want their children viewing, 
+        set timers for how much screen time they are allowed in a given period of time, and block videos that parents do not want their kids to watch. However even the app 
+        acknowledges that even with all these settings, age-inappropriate content may still slip through. Channels are also able to set themselves as a made-for-kids channel. 
+        Enabling this will prevent children from accessing certain features that you would see on ordinary videos, such as the ability to watch videos in the background, the 
+        auto-play feature which will continue playing the next recommended video, and comment sections. Many more features are blocked to try control and filter out content, 
+        however these are some of the main noticeable ones.
+      </p>
+      <p>
+        As mentioned previously, YouTube is actively creating and updating rules and features that can allow children to watch content in a monitored way. 
+        These implementations are helping control the content, however there are limitations present. Although these efforts have been put in place, children and 
+        content creators are able to get around these guidelines with little to no effort needed. YouTube kids is an app that provides a contained viewing environment, but 
+        if parents do not know about it, or kids still have access to regular YouTube, this solution does not achieve anything. Neumann said “Adults should also co-view, 
+        discuss and help children reflect on the content of YouTube videos to ensure that negative messages (e.g., cyberbullying, violence, and stereotypes) are identified 
+        and discouraged, and positive behaviours such as caring and sharing are encouraged and reinforced. Such interactions may contribute to equipping children with the 
+        knowledge and skills to be ethical and critical participants in their online community.” (Neumann, 2020) Also, while the guidelines are there, many content 
+        creators may pass the guidelines, but still show content that kids may be too young to understand, for example, swearing, cyberbullying, sexual content. 
+        While YouTube may remove the content, children will still remember what they have seen, whether the video is there or not. There are also horror stories that stem 
+        from YouTube (Momo for example) which can cause long-term psychological effects on children, many fearing for their own safety, and the safety of their family.
+      </p>
     </div>
 
     <!-- Link to JS file -->
