--- a/misc/references.html
+++ b/misc/references.html
@@ -44,6 +44,10 @@
             <p>aaaaa <a href="#content">Link</a></p>
             <p>Lamb, S. (1993). First moral sense: An examination of the appearance of morally related behaviours in the second year of life. Journal of Moral Education, 22(2), 97-109. https://doi.org/10.1080/0305724930220202</p>
             <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
+            <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education 
+	and Information Technologies, 25(5), 4459-4475.
+	https://doi.org/10.1007/s10639-020-10183-7
+
     </div>
 
     <!-- Link to JS file -->
