--- a/misc/references.html
+++ b/misc/references.html
@@ -46,8 +46,8 @@
             <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
             <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education 
 	and Information Technologies, 25(5), 4459-4475.
-	https://doi.org/10.1007/s10639-020-10183-7
-
+		    https://doi.org/10.1007/s10639-020-10183-7</p>
+	    <p>YouTube (n.d.). Community Guidelines https://bit.ly/2Rlf5kx</p>
     </div>
 
     <!-- Link to JS file -->
