--- a/misc/references.html
+++ b/misc/references.html
@@ -47,7 +47,7 @@
             <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education 
 	and Information Technologies, 25(5), 4459-4475.
 		    https://doi.org/10.1007/s10639-020-10183-7</p>
-	    <p>YouTube (n.d.). Community Guidelines https://bit.ly/2Rlf5kx</p>
+	    <p>YouTube (n.d.). Community Guidelines <a href="https://bit.ly/2Rlf5kx">https://bit.ly/2Rlf5kx</a></p>
     </div>
 
     <!-- Link to JS file -->
