--- a/misc/references.html
+++ b/misc/references.html
@@ -47,6 +47,12 @@
 	and Information Technologies, 25(5), 4459-4475.
 		    https://doi.org/10.1007/s10639-020-10183-7</p>
 	    <p>YouTube (n.d.). Community Guidelines <a href="https://bit.ly/2Rlf5kx">https://bit.ly/2Rlf5kx</a></p>
+	    <p>Kostantinos Papadamou. (2020). View of disturbed YouTube for kids: Characterizing and detecting inappropriate videos targeting young children. AAAI Publications. https://ojs.aaai.org/index.php/ICWSM/article/view/7320/7174</p>
+	    <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
+	    <p>Ahern, N. R., Sauer, P., & Thacker, P. (2015). Risky behaviors and social networking sites: how is YouTube influencing our youth?. Journal of psychosocial nursing and mental health services, 53(10), 25-29.</p>
+	    <p>Trana, R. E., Gomez, C. E., & Adler, R. F. (2020, July). Fighting Cyberbullying: An Analysis of Algorithms Used to Detect Harassing Text Found on YouTube. In International Conference on Applied Human Factors and Ergonomics (pp. 9-15). Springer, Cham.</p>
+	    <p>Papadamou, K., Papasavva, A., Zannettou, S., Blackburn, J., Kourtellis, N., Leontiadis, I., ... & Sirivianos, M. (2019). Disturbed youtube for kids: Characterizing and detecting disturbing content on youtube. arXiv preprint arXiv:1901.07046.</p>
+	    
     </div>
 
     <!-- Link to JS file -->
