--- a/misc/references.html
+++ b/misc/references.html
@@ -40,19 +40,15 @@
             <h1>YouTube and its Effects on Children</h1>
             <h2>References</h2>
             <h4>The page or area listing the sources (high quality refereed articles - cited as APA formatted references) and any web links to high quality resources supporting the arguments in your site.</h4>
-        </center>
-            <p>Lamb, S. (1993). First moral sense: An examination of the appearance of morally related behaviours in the second year of life. Journal of Moral Education, 22(2), 97-109. https://doi.org/10.1080/0305724930220202</p>
-            <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
-            <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education 
-	and Information Technologies, 25(5), 4459-4475.
-		    https://doi.org/10.1007/s10639-020-10183-7</p>
-	    <p>YouTube (n.d.). Community Guidelines <a href="https://bit.ly/2Rlf5kx">https://bit.ly/2Rlf5kx</a></p>
-	    <p>Kostantinos Papadamou. (2020). View of disturbed YouTube for kids: Characterizing and detecting inappropriate videos targeting young children. AAAI Publications. https://ojs.aaai.org/index.php/ICWSM/article/view/7320/7174</p>
-	    <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
+        </center>	    
 	    <p>Ahern, N. R., Sauer, P., & Thacker, P. (2015). Risky behaviors and social networking sites: how is YouTube influencing our youth?. Journal of psychosocial nursing and mental health services, 53(10), 25-29.</p>
-	    <p>Trana, R. E., Gomez, C. E., & Adler, R. F. (2020, July). Fighting Cyberbullying: An Analysis of Algorithms Used to Detect Harassing Text Found on YouTube. In International Conference on Applied Human Factors and Ergonomics (pp. 9-15). Springer, Cham.</p>
+	    <p>Kostantinos Papadamou. (2020). View of disturbed YouTube for kids: Characterizing and detecting inappropriate videos targeting young children. AAAI Publications. https://ojs.aaai.org/index.php/ICWSM/article/view/7320/7174</p>
+	    <p>Lamb, S. (1993). First moral sense: An examination of the appearance of morally related behaviours in the second year of life. Journal of Moral Education, 22(2), 97-109. https://doi.org/10.1080/0305724930220202</p>
+	    <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education and Information Technologies, 25(5), 4459-4475.https://doi.org/10.1007/s10639-020-10183-7</p>
 	    <p>Papadamou, K., Papasavva, A., Zannettou, S., Blackburn, J., Kourtellis, N., Leontiadis, I., ... & Sirivianos, M. (2019). Disturbed youtube for kids: Characterizing and detecting disturbing content on youtube. arXiv preprint arXiv:1901.07046.</p>
-	    
+	    <p>Tahir, R., Ahmed, F., Saeed, H., Ali, S., Zaffar, F., & Wilson, C. (2019, August). Bringing the kid back into youtube kids: Detecting inappropriate content on video streaming platforms. In 2019 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) (pp. 464-469). IEEE.</p>
+	    <p>Trana, R. E., Gomez, C. E., & Adler, R. F. (2020, July). Fighting Cyberbullying: An Analysis of Algorithms Used to Detect Harassing Text Found on YouTube. In International Conference on Applied Human Factors and Ergonomics (pp. 9-15). Springer, Cham.</p>
+	    <p>YouTube (n.d.). Community Guidelines <a href="https://bit.ly/2Rlf5kx">https://bit.ly/2Rlf5kx</a></p>
     </div>
 
     <!-- Link to JS file -->
