--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -63,10 +63,10 @@
               </tr>
                 <p align = "left"</p>
               <tr><th scope="row">Team Member 2</th>
-                  <td>c</td>
-                  <td>d</td>
-                  <td>3</td>
-                  <td>4</td>
+                  <td>Gibson</td>
+                  <td>Callum</td>
+                  <td>15906010</td>
+                  <td>bxh9553@autuni.ac.nz</td>
               <td><a href="team2.html">Page</a> </td>
               </tr>
               <p align = "left"</p>
