--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -67,7 +67,7 @@
                   <td>Callum</td>
                   <td>15906010</td>
                   <td>bxh9553@autuni.ac.nz</td>
-              <td><a href="team2.html">Page</a> </td>
+              <td><a href="cgethics.html">Page</a> </td>
               </tr>
               <p align = "left"</p>
                 <tr><th scope="row">Team Member 3</th>
