--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <div id="content">
         <center>
             <h1>CTiS: Impact of Technology Site</h1>
-            <p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-            <p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a "minimum viable product" for the purposes of this project… It has some default links, which you can take as a start for your site structure. The Process Support Links provides guidance which will be needed for presenting your final project.</p>
+            <p>This is a home page.</p>
         </center>
     </div>
 
