--- a/misc/cg_ethics.html
+++ b/misc/cg_ethics.html
@@ -41,7 +41,26 @@
             <h2>Ethical Reflection and Recommendations</h2>
             <h3>By Callum Gibson</h3>
         </center>
-            <p>YouTube is kinda suss, but kinda good.</p>
+            <p>
+              I believe there are many ethical implications to be had in regard to YouTube, especially when talking about how it affects children. 
+              We live in a time where the ability to voice your own opinion is easier than ever. Everyone should be allowed to have their own voice, however the 
+              issue in regards to YouTube is it allows opinions to be shared much easier, and can be used to persuade all people, but especially children, to 
+              think differently. It can be used to tell children that something is the right thing to do, when in reality it is not. 
+      </p>
+      <p>
+      Watching YouTube creators can trick children into thinking that the creator cares about them, or even just knows who they are. There are many children 
+        who go online to watch a streamer or content creator, and the line between entertainer and friend gets blurred, so the children think they are closer 
+        than they really are. This can lead to heartbreak when the creators either never acknowledge them, or they tell them that they do not care about them 
+        the same way the child thinks about the creator. 
+      </p>
+      <p>
+      I believe that anyone creating content on YouTube is an entertainer, and due to that fact, there is always going to be that blurred line where a viewer 
+        thinks they know a lot more about the creator. Children are the most susceptible to these kind of relationships, and I do not believe YouTube will be able 
+        to fix this. Parents need to sit their children down and have a conversation with them, explaining that online personalities are there to entertain, and 
+        are not there to make friends. It needs to become the new normal when raising children to explain the internet personalities, and explain these points to 
+        them at a young age. It is unavoidable in a lot of cases though, as children are always going to feel close to someone if they feel like the creator cares 
+        about them. 
+      </p>
     </div>
 
     <!-- Link to JS file -->
