--- a/misc/references.html
+++ b/misc/references.html
@@ -41,6 +41,7 @@
             <h2>References</h2>
 	</center>	    
 	    <p>Ahern, N. R., Sauer, P., & Thacker, P. (2015). Risky behaviors and social networking sites: how is YouTube influencing our youth?. Journal of psychosocial nursing and mental health services, 53(10), 25-29.</p>
+	    <p>Jones, T., & Cuthrell, K. (2011). YouTube: Educational potentials and pitfalls. Computers in the Schools, 28(1), 75-85.</p>
 	    <p>Kostantinos Papadamou. (2020). View of disturbed YouTube for kids: Characterizing and detecting inappropriate videos targeting young children. AAAI Publications. https://ojs.aaai.org/index.php/ICWSM/article/view/7320/7174</p>
 	    <p>Lamb, S. (1993). First moral sense: An examination of the appearance of morally related behaviours in the second year of life. Journal of Moral Education, 22(2), 97-109. https://doi.org/10.1080/0305724930220202</p>
 	    <p>Neumann, M. M., & Herodotou, C. (2020). Evaluating YouTube videos for young children. Education and Information Technologies, 25(5), 4459-4475.https://doi.org/10.1007/s10639-020-10183-7</p>
