--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -58,7 +58,7 @@
                   <td>Hilario</td>
                   <td>Alessandra</td>
                   <td>20114643</td>
-                  <td>dgg0970@autuni.ac.nz</td>
+                  <td>dgg0970</td>
                   <td><a href="https://alessandra-h.github.io/ah-ethics/" target="_blank" rel="noreferrer noopener">Page</a> </td>
               </tr>
                 <p align = "left"</p>
@@ -66,7 +66,7 @@
                   <td>Gibson</td>
                   <td>Callum</td>
                   <td>15906010</td>
-                  <td>bxh9553@autuni.ac.nz</td>
+                  <td>bxh9553</td>
               <td><a href="cg_ethics.html">Reflection</a> </td>
               </tr>
               <p align = "left"</p>
