--- a/misc/process-support/team-formation.html
+++ b/misc/process-support/team-formation.html
@@ -56,20 +56,20 @@
                     <td>Hilario</td>
                     <td>Alessandra</td>
                     <td>20114643</td>
-                    <td>dgg0970@autuni.ac.nz</td>
+                    <td>dgg0970</td>
             </tr>
                 <p align = "left"</p>
                 <th scope="row">Team Member 2</th>
                     <td>Gibson</td>
                     <td>Callum</td>
                     <td>15906010</td>
-                    <td>bxh9553@autuni.ac.nz</td>
+                    <td>bxh9553</td>
                 </tr>
                 <th scope="row">Team Member 3</th>
                     <td>Jung</td>
                     <td>Rino</td>
                     <td>21131579</td>
-                    <td>nbk0694@autuni.ac.nz</td>
+                    <td>nbk0694</td>
                 </tr>
             </table>
         </center>
