--- a/misc/process-support/portfolio.html
+++ b/misc/process-support/portfolio.html
@@ -40,7 +40,7 @@
         <h3>Team coordinators/leaders: Callum / Alessandra </h3>
         <hr>
 
-      <p><a href="https://github.com/CallumdGibson/callumdgibson.github.io">Portfolio Repository Alternative Link</a></p>
+      <p><a href="https://github.com/CallumdGibson/callumdgibson.github.io" target="_blank">Portfolio Repository Alternative Link</a></p>
         <h5>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. teams or dropbox</h5>
     </div>
 
